refactor: writed review fixes, added simple docker file